fixed to correspond variety of include syntex formats

--- a/test/fixtures/include-partials/index.html
+++ b/test/fixtures/include-partials/index.html
@@ -16,16 +16,25 @@
 
 
     <main>
-        <section>Section: 1</section>
-        <section>Section: 2</section>
-        <section>Section: 3</section>
-        <section>Section: 4</section>
-        <section>Section: 5</section>
-        <section>Section: 6</section>
-        <section>Section: 7</section>
-        <section>Section: 8</section>
-        <section>Section: 9</section>
-        <section>Section: 10</section>
+        <div class="iterate">
+            <section>Section: 1</section>
+            <section>Section: 2</section>
+            <section>Section: 3</section>
+            <section>Section: 4</section>
+            <section>Section: 5</section>
+            <section>Section: 6</section>
+            <section>Section: 7</section>
+            <section>Section: 8</section>
+            <section>Section: 9</section>
+            <section>Section: 10</section>
+        </div>
+
+        <div class="variable-formats">
+            <section>Section: Format 1</section>
+            <section>Section: Format 2</section>
+            <section>Section: Format 3</section>
+            <section>Section: Format 4</section>
+        </div>
     </main>
 
     <footer>
